# sparrow-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
apps/cli/: __init__.py  main.py  ui.py
apps/server/: __init__.py  main.py
apps/web/: index.html
docs/plans/: 2026-03-20-sparrow-agent-next-development-plan.md  2026-04-03-cli-thinking-animation-design.md  2026-04-09-response-streaming-design.md  2026-04-09-session-id-defaults.md
docs/superpowers/plans/: 2026-04-03-storage-refactor.md
docs/superpowers/specs/: 2026-04-03-storage-refactor-design.md
docs/todos/: README.md
sparrow_agent/: __init__.py  config.py  session_ids.py
sparrow_agent/capabilities/: __init__.py  base.py  mcp.py  skills.py  tools.py
sparrow_agent/core/: bootstrap.py  consolidator.py  context_loader.py  halt_policy.py  react_loop.py  runtime.py
sparrow_agent/llm/: __init__.py  base.py  openai_client.py
sparrow_agent/memory/: store.py
sparrow_agent/schemas/: models.py
sparrow_agent/storage/: file_store.py
sparrow_agent/tools/: base.py  filesystem.py  memory_docs.py  registry.py
templates/runtime/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
templates/runtime/memory/: README.md
tests/: test_cli_ui.py  test_context_loader.py  test_file_store.py  test_openai_config.py  test_runtime.py  test_server.py  test_session_ids.py  test_tools.py  test_web_app.py
