[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparrow-agent"
version = "0.1.0"
description = "Lightweight Python agent runtime with file-backed storage, CLI, and Web UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=2.30.0,<3.0",
  "pydantic>=2.9,<3.0",
  "typer>=0.16,<1.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["sparrow_agent*", "apps*"]

[tool.setuptools.package-data]
sparrow_agent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
